Implemented new masking method

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import xlsxwriter\n",
-    "# import napari"
+    "import napari"
    ]
   },
   {
@@ -40,153 +40,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell must be excuted!\n",
-    "\n",
-    "The following cell contains definitions of all methods, which will be used for downstream analysis. You can find descriptions of the functionalities of the methods at the top of the method definitions."
+    "This cell must be excuted!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Classes and functions\n",
-    "\n",
-    "class RootAnalysis():\n",
+    "def save_img(path, img, name):\n",
     "    '''\n",
-    "    Object for quantifying the amount of lignin polymers in Arabidopsis seedlings\n",
-    "    methods: read, to_gray, crop_img, calc_thresh, bin_img, smoothen, calc_intensity, save_img\n",
+    "    Method for smoothening boundaries in binarized images\n",
+    "    img: image to be saved\n",
+    "    name: name suffix added to original file name\n",
     "    '''\n",
-    "    def __init__(self, file):\n",
-    "        '''\n",
-    "        Class initialization\n",
-    "        f: path to the file containing all images that are to be analysed, \n",
-    "        e.g., 'images/root_images/root0004.tif'\n",
-    "        '''\n",
-    "        self.f = file\n",
-    "    \n",
-    "    def read(self):\n",
-    "        '''\n",
-    "        Method for reading images\n",
-    "        '''\n",
-    "        # Read image\n",
-    "        img = cv.imread(self.f)\n",
-    "        return img\n",
-    "    \n",
-    "    def to_gray(self, img):\n",
-    "        '''\n",
-    "        Method for converting images to gray-scale\n",
-    "        img: image to be converted to gray-scale\n",
-    "        '''\n",
-    "        # Convert image to grayscale\n",
-    "        img_gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "        return img_gray\n",
-    "    \n",
-    "    def crop_img(self, img, n=255):\n",
-    "        '''\n",
-    "        Method for \"cropping\" images by setting the first and last 255 pixel rows to white\n",
-    "        img: image to be cropped\n",
-    "        n: number of top and bottom pixel rows to be cropped\n",
-    "        '''\n",
-    "        # Create copy of image\n",
-    "        img_cp = img.copy()\n",
-    "        # Set first and last 255 rows to white\n",
-    "        img_cp[:225] = n\n",
-    "        img_cp[-225:] = n\n",
-    "        return img_cp\n",
-    "    \n",
-    "    def calc_thresh(self, img, n=255):\n",
-    "        '''\n",
-    "        Method for calculating the threshold that will be used to binarize images, \n",
-    "        i.e., separate foreground (in this case stained regions) from background\n",
-    "        img: image, for which the threshold is to be calculated\n",
-    "        n: number of top and bottom pixel rows that are ignored\n",
-    "        '''\n",
-    "        # Calculate 10%-quantile\n",
-    "        q_10 = np.quantile(img[n+1:-(n+1),:],0.10)\n",
-    "        # Calculate threshold as mean pixel intensity over 10%-quantile\n",
-    "        # Adjust by some constant, e.g., c=2\n",
-    "        th = np.average(img[img <= q_10]) - 2\n",
-    "        # If the threshold is larger than 145, there probably is a very low amount of Lignin.\n",
-    "        # In this case, set the threshold to 145 to ensure comparability between images.\n",
-    "        if th > 150:\n",
-    "            th = 145\n",
-    "        # If the threshold is lower than 125, there probably is a very high amount of Lignin.\n",
-    "        # In this case, set the threshold to 125 to ensure comparability between images.\n",
-    "        elif th < 125:\n",
-    "            th = 125\n",
-    "        return th\n",
-    "    \n",
-    "    def bin_img(self, img, th):\n",
-    "        '''\n",
-    "        Method for binarizing images\n",
-    "        img: image to be binarized\n",
-    "        th: threshold\n",
-    "        '''\n",
-    "        # Binarize image by means of thresholding\n",
-    "        _, bin_img = cv.threshold(img,th,255,cv.THRESH_BINARY)\n",
-    "        return bin_img\n",
-    "    \n",
-    "    def smoothen(self, img):\n",
-    "        '''\n",
-    "        Method for smoothening boundaries in binarized images\n",
-    "        img: binarized image\n",
-    "        '''\n",
-    "        # Smoothen boundaries in binarised image by means of morphological opening\n",
-    "        kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE,(2,2))\n",
-    "        sm_img = cv.morphologyEx(img, cv.MORPH_OPEN, kernel)\n",
-    "        return sm_img\n",
-    "    \n",
-    "    def calc_intensity(self, bin_img, img, n=225):\n",
-    "        '''\n",
-    "        Method for calculating gray-scale intensities over\n",
-    "            1) stained region\n",
-    "            2) cropped region\n",
-    "            3) whole image\n",
-    "        bin_img: binarized image\n",
-    "        img: original image\n",
-    "        n: number of top and bottom pixel rows that are ignored\n",
-    "        '''\n",
-    "        # Create copy of binarized image and convert to boolean\n",
-    "        bool_img = bin_img.copy()\n",
-    "        bool_img[bool_img == 0] = True\n",
-    "        bool_img[bool_img == 255] = False\n",
-    "        bool_img = bool_img.astype('bool')\n",
-    "\n",
-    "        # image dimensions, i.e., h x w pixels\n",
-    "        h, w = img.shape\n",
-    "        # area of whole image\n",
-    "        area = h*w\n",
-    "        # area of cropped region\n",
-    "        area_cp = (h-2*n)*w\n",
-    "        # area of stained region\n",
-    "        area_st = np.sum(bool_img)\n",
-    "\n",
-    "        # grayscale intensity normalized over stained region\n",
-    "        int1 = np.sum(img[bool_img])/area_st\n",
-    "        # grayscale intensity normalized over cropped region\n",
-    "        int2 = np.sum(img[bool_img])/area_cp\n",
-    "        # grayscale intensity normalized over whole image\n",
-    "        int3 = np.sum(img[bool_img])/area\n",
-    "\n",
-    "        # print(f\"Grayscale intensity normalized over stained region: {int1}\")\n",
-    "        # print(f\"Grayscale intensity normalized over cropped region: {int2}\")\n",
-    "        # print(f\"Grayscale intensity normalized over whole image: {int3}\")\n",
-    "        return np.array([area_st, area_cp]), np.array([int1, int2, int3])\n",
-    "    \n",
-    "    def save_img(self, img, name):\n",
-    "        '''\n",
-    "        Method for smoothening boundaries in binarized images\n",
-    "        img: image to be saved\n",
-    "        name: name suffix added to original file name\n",
-    "        '''\n",
-    "        txt1 = self.f.split('.')\n",
-    "        txt1 = f\"{txt1[0]}_{name}.tif\"\n",
-    "        txt2 = txt1.split('\\\\')\n",
-    "        txt2 = f\"{txt2[0]}_{name}\\{txt2[1]}\"\n",
-    "        cv.imwrite(txt2, img)\n",
-    "    "
+    "    txt1 = path.split('.')\n",
+    "    txt1 = f\"{txt1[0]}_{name}.tif\"\n",
+    "    txt2 = txt1.split('\\\\')\n",
+    "    txt2 = f\"{txt2[0]}_{name}\\{txt2[1]}\"\n",
+    "    cv.imwrite(txt2, img)"
    ]
   },
   {
@@ -194,22 +67,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cell runs the analysis for all images in the specified directory. The path to the directory is specified under the variable \"directory\", e.g., directory = 'images/root_images'. If you wish to save the processed images after a specific step, e.g., after gray-scale conversion or binarization, uncomment the corresponding line by removing the \"#\". After successful execution of the cell, an excel file will be stored, containing the gray-scale intensities over the stained region, the cropped region, the whole image, the area of the stained region (in number of pixels) and the area of the cropped region. Currently, the file will be saved as \"output.xlsx\". If you wish to change the name of the output file, just enter a different filename (but keeping the file extension .xlsx)."
+    "Run the next cell for analysis of all images stored in images/root_images!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create dataframe\n",
-    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped region':[]}\n",
+    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped image':[], 'area whole image':[]}\n",
     "df = pd.DataFrame(data)\n",
+    "\n",
     "\n",
     "# assign directory\n",
     "directory = 'images/root_images'\n",
-    " \n",
+    "\n",
+    "\n",
+    "# define rgb thresholds\n",
+    "low = np.array([0, 0, 0])\n",
+    "high = np.array([210, 190, 217])\n",
+    "\n",
+    "\n",
     "# iterate over files in directory\n",
     "for filename in os.listdir(directory):\n",
     "    # path\n",
@@ -217,121 +97,42 @@
     "\n",
     "    if f.split('.')[1] != 'tif':\n",
     "        continue\n",
-    "\n",
-    "    # create instance for image analysis\n",
-    "    object = RootAnalysis(f)\n",
-    "\n",
-    "    # read image\n",
-    "    img = object.read()\n",
-    "\n",
-    "    # convert image to grayscale\n",
-    "    gray_img = object.to_gray(img)\n",
-    "\n",
-    "    # crop image\n",
-    "    cropped_img = object.crop_img(gray_img)\n",
-    "\n",
-    "    # calculate threshold\n",
-    "    th = object.calc_thresh(gray_img)\n",
-    "    # Define constant global threshold instead\n",
-    "    # th = 140\n",
-    "\n",
-    "    # binarize image\n",
-    "    bin_img = object.bin_img(cropped_img, th)\n",
-    "\n",
-    "    # smoothen boundaries in binarized image\n",
-    "    final_img = object.smoothen(bin_img)\n",
-    "\n",
-    "    # save binarized image\n",
-    "    object.save_img(final_img, 'bin')\n",
     "    \n",
-    "    # compute area of cropped and stained region\n",
-    "    # compute grayscale intensities normalized over stained region, cropped region, whole image\n",
-    "    area, intensity = object.calc_intensity(final_img, gray_img)\n",
+    "    # read image and convert to grayscale\n",
+    "    og_img = cv.imread(f)\n",
+    "    gray_og_img = cv.cvtColor(og_img, cv.COLOR_BGR2GRAY)\n",
     "\n",
-    "    # insert values\n",
-    "    new_row = np.concatenate((intensity, area))\n",
+    "    # crop original and grayscale image\n",
+    "    img = og_img[500:-(500+1),:,:]\n",
+    "    gray_img = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # compute mask\n",
+    "    mask = cv.inRange(img, low, high)\n",
+    "\n",
+    "    # lay mask over cropped image and cropped grayscale image\n",
+    "    masked_img = cv.bitwise_and(img, img, mask=mask)\n",
+    "    masked_gray_img = cv.bitwise_and(gray_img, gray_img, mask=mask)\n",
+    "\n",
+    "    # compute area of stained region, cropped region and whole image\n",
+    "    area_stained = np.sum(masked_gray_img > 0)\n",
+    "    area_cropped = img.shape[0]*img.shape[1]\n",
+    "    area_whole = og_img.shape[0]*og_img.shape[1]\n",
+    "\n",
+    "    # compute grayscale intensities\n",
+    "    intensity_stained = np.sum(masked_gray_img) / area_stained\n",
+    "    intensity_cropped = np.sum(masked_gray_img) / area_cropped\n",
+    "    intensity_whole = np.sum(masked_gray_img) / area_whole\n",
+    "\n",
+    "    # add new data to dataframe\n",
+    "    new_row = np.array([intensity_stained, intensity_cropped, intensity_whole, area_stained, area_cropped, area_whole])\n",
     "    df.loc[len(df)] = new_row\n",
+    "    \n",
+    "    # save masked, cropped image\n",
+    "    save_img(f, masked_img, 'msk')\n",
     "\n",
-    "    # # visualize original and processed images with napari\n",
-    "    # viewer = napari.Viewer()\n",
-    "    # viewer.add_image(img, rgb=True, name='Original image')\n",
-    "    # viewer.add_image(gray_img, name='Grayscale image')\n",
-    "    # viewer.add_image(cropped_img, name='Cropped image')\n",
-    "    # viewer.add_image(bin_img, name='Binarized image')\n",
-    "    # viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')\n",
     "\n",
-    "# export to excel\n",
+    "# create excel table from dataframe\n",
     "df.to_excel(\"output.xlsx\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following cell does exactly the same as the previous cell, except that only one specific image is analysed. The path to that specific image is saved under the variable f, e.g., f = 'images/root_images/root0004.tif'. This cell can be ignored if you do not wish to analyse one specific image only."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assign directory\n",
-    "directory = 'images/root_images'\n",
-    "\n",
-    "# path\n",
-    "f = os.path.join(directory, 'root0004.tif')\n",
-    "\n",
-    "# create instance for image analysis\n",
-    "object = RootAnalysis(f)\n",
-    "\n",
-    "# read image\n",
-    "img = object.read()\n",
-    "\n",
-    "# convert image to grayscale\n",
-    "gray_img = object.to_gray(img)\n",
-    "\n",
-    "# crop image\n",
-    "cropped_img = object.crop_img(gray_img)\n",
-    "\n",
-    "# calculate threshold\n",
-    "th = object.calc_thresh(gray_img)\n",
-    "# Define constant threshold instead\n",
-    "# th = 140\n",
-    "\n",
-    "# binarize image\n",
-    "bin_img = object.bin_img(cropped_img, th)\n",
-    "\n",
-    "# smoothen boundaries in binarized image\n",
-    "final_img = object.smoothen(bin_img)\n",
-    "\n",
-    "# save binarized image\n",
-    "object.save_img(final_img, 'bin')\n",
-    "\n",
-    "# compute area of cropped and stained region\n",
-    "# compute grayscale intensities normalized over stained region, cropped region, whole image\n",
-    "area, intensity = object.calc_intensity(final_img, gray_img)\n",
-    "\n",
-    "# create dataframe\n",
-    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped region':[]}\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# insert values\n",
-    "new_row = np.concatenate((intensity, area))\n",
-    "df.loc[len(df)] = new_row\n",
-    "\n",
-    "# export to excel\n",
-    "# df.to_excel(\"output.xlsx\") \n",
-    "\n",
-    "# # visualize original and processed images with napari\n",
-    "# viewer = napari.Viewer()\n",
-    "# viewer.add_image(img, rgb=True, name='Original image')\n",
-    "# viewer.add_image(gray_img, name='Grayscale image')\n",
-    "# viewer.add_image(cropped_img, name='Cropped image')\n",
-    "# viewer.add_image(bin_img, name='Binarized image')\n",
-    "# viewer.add_image(final_img, name='Binarized image w/ smoothened boundaries')"
    ]
   }
  ],
