Crop images left and right

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "    gray_og_img = cv.cvtColor(og_img, cv.COLOR_BGR2GRAY)\n",
     "\n",
     "    # crop original and grayscale image\n",
-    "    img = og_img[500:-(500+1),:,:]\n",
+    "    img = og_img[500:-(500+1),500:-(500+1),:]\n",
     "    gray_img = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
     "\n",
     "    # compute mask\n",
