Added column with file names to output table

--- a/Image_analysis.ipynb
+++ b/Image_analysis.ipynb
@@ -72,12 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# viewer = napari.Viewer()\n",
+    "\n",
     "# create dataframe\n",
-    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale whole image':[], 'area stained region':[], 'area cropped image':[], 'area whole image':[]}\n",
+    "data = {'grayscale intensity stained region':[], 'grayscale intensity cropped region':[], 'grayscale intensity whole image':[], 'area stained region':[], 'area cropped image':[], 'area whole image':[]}\n",
     "df = pd.DataFrame(data)\n",
     "\n",
     "\n",
@@ -90,6 +92,9 @@
     "high = np.array([210, 190, 217])\n",
     "\n",
     "\n",
+    "f_names = []\n",
+    "\n",
+    "\n",
     "# iterate over files in directory\n",
     "for filename in os.listdir(directory):\n",
     "    # path\n",
@@ -97,6 +102,8 @@
     "\n",
     "    if f.split('.')[1] != 'tif':\n",
     "        continue\n",
+    "\n",
+    "    f_names.append(f.split('\\\\')[-1])\n",
     "    \n",
     "    # read image and convert to grayscale\n",
     "    og_img = cv.imread(f)\n",
@@ -128,7 +135,12 @@
     "    df.loc[len(df)] = new_row\n",
     "    \n",
     "    # save masked, cropped image\n",
-    "    save_img(f, masked_img, 'msk')\n",
+    "    # save_img(f, masked_img, 'msk')\n",
+    "\n",
+    "    # viewer.add_image(masked_img)\n",
+    "    # viewer.add_image(img)\n",
+    "\n",
+    "df.insert(0, \"file name\", f_names, True)\n",
     "\n",
     "\n",
     "# create excel table from dataframe\n",
